--- a/hotel-admin/pom.xml
+++ b/hotel-admin/pom.xml
@@ -31,6 +31,7 @@
 		<spring.boot.admin.version>2.0.0</spring.boot.admin.version>
 		<spring-cloud.version>Finchley.RELEASE</spring-cloud.version>
 		<docker.image.prefix>hotel</docker.image.prefix>
+		<mapper.version>3.3.6</mapper.version>
 	</properties>
 
 	<dependencies>
