--- a/hotel-core/pom.xml
+++ b/hotel-core/pom.xml
@@ -41,6 +41,22 @@
             <artifactId>pagehelper</artifactId>
             <version>5.1.4</version>
         </dependency>
-    </dependencies>
+        <dependency>
+            <groupId>tk.mybatis</groupId>
+            <artifactId>mapper</artifactId>
+            <version>3.4.6</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.48</version>
+		</dependency>
+
+	</dependencies>
 	
 </project>
