--- a/hotel-admin/pom.xml
+++ b/hotel-admin/pom.xml
@@ -45,6 +45,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>tk.mybatis</groupId>
+			<artifactId>mapper-spring-boot-starter</artifactId>
+			<version>2.0.0</version>
+		</dependency>
 		<!-- spring aop -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -120,7 +125,7 @@
 	    <!--</dependency>-->
 		<!-- hotel-core -->
 		<dependency>
-			<groupId>com.louis</groupId>
+			<groupId>com.hotel</groupId>
 			<artifactId>hotel-core</artifactId>
 			<version>1.0.0</version>
 		</dependency>
@@ -129,6 +134,14 @@
 			<artifactId>spring-tx</artifactId>
 			<version>5.1.3.RELEASE</version>
 		</dependency>
+
+		<!-- mybatis自动生成配置文件 -->
+		<dependency>
+			<groupId>org.mybatis.generator</groupId>
+			<artifactId>mybatis-generator-core</artifactId>
+			<version>1.3.2</version>
+		</dependency>
+
 	</dependencies>
 	
 	<!--srping cloud-->
