--- a/hotel-admin/src/main/resources/application.yml
+++ b/hotel-admin/src/main/resources/application.yml
@@ -57,4 +57,8 @@ pagehelper:
     reasonable: true
     supportMethodsArguments: true
     params: count=countSql
-    
+#mybatis
+mybatis:
+  type-aliases-package: com.hotel.core.page
+  mapper-locations: classpath:com/hotel/**/mapper/xml/*.xml
+  config-location: classpath:mybatis/mybatis-config.xml
