--- a/hotel-admin/pom.xml
+++ b/hotel-admin/pom.xml
@@ -10,7 +10,7 @@
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 
-	<groupId>com.louis</groupId>
+	<groupId>com.hotel</groupId>
 	<artifactId>hotel-admin</artifactId>
 	<packaging>jar</packaging>
 	<version>1.0.0</version>
@@ -129,7 +129,7 @@
 	    <!--</dependency>-->
 		<!-- hotel-core -->
 		<dependency>
-			<groupId>com.louis</groupId>
+			<groupId>com.hotel</groupId>
 			<artifactId>hotel-core</artifactId>
 			<version>1.0.0</version>
 		</dependency>
@@ -138,7 +138,18 @@
 			<artifactId>spring-tx</artifactId>
 			<version>5.1.3.RELEASE</version>
 		</dependency>
-	</dependencies>
+		<!-- mybatis自动生成配置文件 -->
+		<dependency>
+			<groupId>org.mybatis.generator</groupId>
+			<artifactId>mybatis-generator-core</artifactId>
+			<version>1.3.2</version>
+		</dependency>
+		<dependency>
+			<groupId>tk.mybatis</groupId>
+			<artifactId>mapper-spring-boot-starter</artifactId>
+			<version>2.0.0</version>
+		</dependency>
+    </dependencies>
 	
 	<!--srping cloud-->
 	<dependencyManagement>
