--- a/hotel-admin/src/main/resources/application.yml
+++ b/hotel-admin/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
       driver-class-name: com.mysql.jdbc.Driver
       url: jdbc:mysql://118.24.47.239:3306/hotel?useUnicode=true&zeroDateTimeBehavior=convertToNull&autoReconnect=true&characterEncoding=utf-8&useSSL=true
       username: root
-      password: root
+      password: admin!#%123
       filters: stat,wall,log4j,config
       max-active: 100
       initial-size: 1
