--- a/hotel-admin/pom.xml
+++ b/hotel-admin/pom.xml
@@ -149,7 +149,13 @@
 			<artifactId>mapper-spring-boot-starter</artifactId>
 			<version>2.0.0</version>
 		</dependency>
-    </dependencies>
+		<dependency>
+			<groupId>com.hotel</groupId>
+			<artifactId>hotel-common</artifactId>
+			<version>1.0.0</version>
+			<scope>compile</scope>
+		</dependency>
+	</dependencies>
 	
 	<!--srping cloud-->
 	<dependencyManagement>
