--- a/hotel-core/pom.xml
+++ b/hotel-core/pom.xml
@@ -41,15 +41,16 @@
             <artifactId>pagehelper</artifactId>
             <version>5.1.4</version>
         </dependency>
-        <dependency>
-            <groupId>tk.mybatis</groupId>
-            <artifactId>mapper</artifactId>
-            <version>3.3.9</version>
-        </dependency>
+		<dependency>
+			<groupId>tk.mybatis</groupId>
+			<artifactId>mapper-spring-boot-starter</artifactId>
+			<version>2.0.0</version>
+		</dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>3.1.0</version>
+			<scope>provided</scope>
         </dependency>
 		<dependency>
 			<groupId>com.alibaba</groupId>
