--- a/hotel-admin/pom.xml
+++ b/hotel-admin/pom.xml
@@ -57,6 +57,11 @@
 			<artifactId>mapper-spring-boot-starter</artifactId>
 			<version>2.0.0</version>
 		</dependency>
+		<!--  springboot整合 redis -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
