--- a/hotel-admin/src/main/resources/application.yml
+++ b/hotel-admin/src/main/resources/application.yml
@@ -34,6 +34,15 @@ spring:
   # spring boot admin
   application:
     name: hotel-admin
+  #redis
+  redis:
+    host: 118.24.47.239
+    password: redis!#%123
+    port: 6379
+    jedis:
+      pool:
+        max-active: 100
+    database: 10
 # pagehelper
 pagehelper:
     helperDialect: mysql
