--- a/hotel-core/pom.xml
+++ b/hotel-core/pom.xml
@@ -31,6 +31,12 @@
 			<artifactId>pagehelper-spring-boot-starter</artifactId>
 			<version>${pagehelper.spring.version}</version>
 		</dependency>
+
+		<!--  springboot整合 redis -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>com.hotel</groupId>
 			<artifactId>hotel-common</artifactId>
