--- a/hotel-admin/src/main/resources/application-sys.properties
+++ b/hotel-admin/src/main/resources/application-sys.properties
@@ -2,3 +2,4 @@ linux.store.path=/home/chen/hotelFile
 windows.store.path=d:/hotelFile
 file.max.size=524288
 file.allow.type=image/jpeg,image/jpg
+allow.login.max=1
