--- a/hotel-admin/src/main/resources/application.yml
+++ b/hotel-admin/src/main/resources/application.yml
@@ -42,6 +42,9 @@ spring:
     jedis:
       pool:
         max-active: 100
+        max-wait: -1
+        min-idle: 5
+        max-idle: 30
     database: 10
 # pagehelper
 pagehelper:
