--- a/hotel-admin/src/main/resources/application.yml
+++ b/hotel-admin/src/main/resources/application.yml
@@ -39,13 +39,15 @@ spring:
     host: 118.24.47.239
     password: redis!#%123
     port: 6379
-    jedis:
-      pool:
-        max-active: 100
-        max-wait: -1
-        min-idle: 5
-        max-idle: 30
     database: 10
+    lettuce:
+      pool:
+        max-active: 50
+        max-idle: 50
+        min-idle: 2
+        max-wait: 10000
+      shutdown-timeout: 100
+    timeout: 20000
 # pagehelper
 pagehelper:
     helperDialect: mysql
