--- a/hotel-admin/src/main/resources/application-sys.properties
+++ b/hotel-admin/src/main/resources/application-sys.properties
@@ -2,4 +2,8 @@ linux.store.path=/home/chen/hotelFile
 windows.store.path=d:/hotelFile
 file.max.size=524288
 file.allow.type=image/jpeg,image/jpg
-allow.login.max=1
+#是否单用户登录 1否 2是
+allow.login.max=2
+
+#访问闲置时间 毫秒
+act.expire.time=900000
