上传大小修改

--- a/hotel-admin/src/main/resources/application-sys.properties
+++ b/hotel-admin/src/main/resources/application-sys.properties
@@ -1,6 +1,6 @@
 linux.store.path=/home/chen/hotelFile
 windows.store.path=d:/hotelFile
-file.max.size=524288
+file.max.size=1048576
 file.allow.type=image/jpeg,image/jpg
 #是否单用户登录 1否 2是
 allow.login.max=2
