--- a/hotel-admin/pom.xml
+++ b/hotel-admin/pom.xml
@@ -195,10 +195,17 @@
 			</resource>
 			<resource>
 				<directory>src/main/resources</directory>
-				<includes>
-					<include>**/*</include>
-				</includes>
 				<filtering>true</filtering>
+				<excludes>
+					<exclude>static/static/fonts/**</exclude>
+				</excludes>
+			</resource>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>false</filtering>
+				<includes>
+					<include>static/static/fonts/**</include>
+				</includes>
 			</resource>
 		</resources>
 		<plugins>
