--- a/hotel-admin/src/main/resources/application-sys.properties
+++ b/hotel-admin/src/main/resources/application-sys.properties
@@ -6,7 +6,16 @@ file.allow.type=image/jpeg,image/jpg
 allow.login.max=2
 
 #访问闲置时间 毫秒
-act.expire.time=900000
+act.expire.time=1800000
 
 #系统天数（用于入住日期和当前日期比较，用于自动切换订单状态）
 allow.system.days = 7
+
+#月报定时时间
+report.month.times =0 0 2 1 * ?
+
+#周报定时时间
+report.week.times =0 30 01 ? * MON
+
+#日报定时时间
+report.day.times =0 30 17 * * ?
