--- a/hotel-admin/src/main/resources/application-sys.properties
+++ b/hotel-admin/src/main/resources/application-sys.properties
@@ -1,9 +1,9 @@
 linux.store.path=/home/chen/hotelFile
-windows.store.path=d:/hotelFile
+windows.store.path=c:/hotelFile
 file.max.size=1048576
 file.allow.type=image/jpeg,image/jpg
 #是否单用户登录 1否 2是
-allow.login.max=2
+allow.login.max=1
 
 #访问闲置时间 毫秒
 act.expire.time=1800000
@@ -12,7 +12,7 @@ act.expire.time=1800000
 allow.system.days = 7
 
 #月报定时时间
-report.month.times =0 0 2 1 * ?
+report.month.times =0 40 15 14 * ?
 
 #周报定时时间
 report.week.times =0 30 01 ? * MON
